<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:itemIconTint="@color/primary_light"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_here"
            android:icon="@drawable/ic_here"
            android:title="@string/nav_here" />

        <item
            android:id="@+id/nav_class"
            android:icon="@drawable/ic_class"
            android:title="@string/nav_lesson" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />


    </group>

    <item android:title="@string/nav_others">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/nav_exit" />
        </menu>
    </item>
</menu>