<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:orientation="vertical"

    >

    <ProgressBar
        android:id="@+id/progress_bar_profile"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_ogrenci_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_weight="1"
        android:textColor="@color/primary_light"
        android:textSize="@dimen/text_size_22sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/text_ogrenci_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/primary_light"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/text_ogrenci_no"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/text_ogrenci_soyad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_weight="1"
        android:textColor="@color/primary_light"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_ogrenci_ad"
        app:layout_constraintStart_toEndOf="@+id/text_ogrenci_ad"
        app:layout_constraintTop_toTopOf="@+id/text_ogrenci_ad" />

    <Button
        android:id="@+id/button_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_weight="1"
        android:text="@string/profile_pass_change"
        android:textColor="@color/primary_light"
        app:layout_constraintEnd_toEndOf="@+id/text_input_new_pass"
        app:layout_constraintTop_toBottomOf="@+id/text_input_new_pass" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/layout_width_150dp"
        android:layout_height="@dimen/layout_height_150dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:contentDescription="@string/profil_image"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:text="@string/profile_student_no"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_size_22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_2dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="@color/accent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="9dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30dp"
        android:text="@string/profile_name_surname"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_size_22sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:text="@string/profile_password_change"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:backgroundTint="@color/primary_light"
        android:textColorHint="@color/primary_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_input_old_pass"
        app:layout_constraintTop_toBottomOf="@+id/text_input_old_pass"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/primary_light">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_light"
            android:hint="@string/profile_new_password_hint"
            android:inputType="numberPassword"
            android:textColor="@color/primary_light"
            android:textColorHint="@color/primary_light" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:backgroundTint="@color/primary_light"
        android:textColorHint="@color/primary_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/primary_light">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_light"
            android:hint="@string/profile_old_password_hint"
            android:inputType="numberPassword"
            android:textColor="@color/primary_light"
            android:textColorHint="@color/primary_light" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>