<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    tools:context=".LoginActivity">



    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:src="@drawable/logo_square"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:text="@string/login"
        android:textColor="@color/primary_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/check_box_acc"
        app:layout_constraintTop_toTopOf="@+id/check_box_acc" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/text_input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:backgroundTint="@color/primary_light"
        android:textColorHint="@color/primary_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:backgroundTint="@color/primary_light"
            android:hint="@string/user_name"
            android:textColor="@color/primary_light" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:backgroundTint="@color/primary_light"
        android:textColorHint="@color/primary_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/primary_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_light"
            android:hint="@string/user_password"
            android:inputType="numberPassword"
            android:textColor="@color/primary_light" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/check_box_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:buttonTint="@color/primary_light"
        android:layoutDirection="ltr"
        android:text="@string/check_box_acc"
        android:textColor="@color/primary_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_password" />

    <ProgressBar

        android:indeterminate="true"
        android:id="@+id/progress_bar_login"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>